kubernetes/apps/bitcoin/config/ingressroute.yaml
---
# LAN-only access to ThunderHub at https://thunderhub.${DOMAIN_0}
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thunderhub
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`thunderhub.${DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: traefik
      services:
        - name: thunderhub
          port: 3000
  tls: {}
